update: List to Deque